--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -336,46 +336,64 @@
    "source": [
     "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*4)))\n",
     "import matplotlib.gridspec as gridspec\n",
+    "import matplotlib.ticker as ticker\n",
     "gs = gridspec.GridSpec(4, 2)\n",
     "ax = fig.add_subplot(gs[0,0])\n",
     "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\Noali\\\\GroAngWave.dat')\n",
     "np.savetxt(dir+\"data\\\\f5(1).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
-    "y=data[:,1]\n",
+    "y=data[:,1]/180\n",
     "z=data[:,2]\n",
     "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
-    "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im)\n",
-    "plt.yticks([90,180,270])\n",
-    "setlabel3(ax,'(a)')\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
+    "im=ax.tricontourf(x,y,z,levels,cmap='jet')#,vmin=0.0,vmax=2.0)\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
+    "cb.locator = tick_locator\n",
+    "# cb.set_ticks([0.0,0.5,1.0,1.5,2.0])\n",
+    "cb.update_ticks()\n",
+    "\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "# position=fig.add_axes([0.25,1.0005,0.5,1.0003])\n",
+    "# cb=plt.colorbar(im,cax=position,fraction=0.15,shrink=0.5,aspect=10,orientation='horizontal')\n",
+    "\n",
+    "# plt.yticks([90,180,270])\n",
+    "setlabel2(ax,'(a)')\n",
     "ax = fig.add_subplot(gs[0,1])\n",
     "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\all\\\\GroAngWave.dat')\n",
     "np.savetxt(dir+\"data\\\\f5(2).dat\",data,fmt=\"%.9f\")\n",
     "x=data[:,0]\n",
-    "y=data[:,1]\n",
+    "y=data[:,1]/180\n",
     "z=data[:,2]\n",
     "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im)\n",
-    "plt.yticks([90,180,270])\n",
-    "setlabel3(ax,'(e)')\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
+    "cb.locator = tick_locator\n",
+    "# cb.set_ticks([0.0,0.5,1.0,1.5,2.0])\n",
+    "cb.update_ticks()\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "# plt.colorbar(im)\n",
+    "# plt.yticks([90,180,270])\n",
+    "setlabel2(ax,'(e)')\n",
     "ax = fig.add_subplot(gs[1, 0])\n",
     "data1=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\ExcAngWave.dat')\n",
     "np.savetxt(dir+\"data\\\\f5(3).dat\",data1,fmt=\"%.9f\")\n",
     "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\NoAli\\\\IonAngWave.dat')\n",
     "np.savetxt(dir+\"data\\\\f5(4).dat\",data2,fmt=\"%.9f\")\n",
     "x=data1[0:,0]\n",
-    "y=data1[:,1]\n",
+    "y=data1[:,1]/180\n",
     "z=data1[:,2]+data2[:,2]\n",
     "plt.xlim(1620,1680)\n",
-    "plt.yticks([90,180,270])\n",
+    "# plt.yticks([90,180,270])\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im)\n",
-    "setlabel3(ax,'(b)')\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "# plt.colorbar(im)\n",
+    "setlabel2(ax,'(b)')\n",
     "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
     "# for tick in ax.get_yticklabels():\n",
     "#     tick.set_rotation(55)\n",
     "ax = fig.add_subplot(gs[1, 1])\n",
@@ -384,15 +402,19 @@
     "data2=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\All\\\\IonAngWave.dat')\n",
     "np.savetxt(dir+\"data\\\\f5(6).dat\",data2,fmt=\"%.9f\")\n",
     "x=data1[:,0]\n",
-    "y=data1[:,1]\n",
+    "y=data1[:,1]/180\n",
     "z=data1[:,2]+data2[:,2]\n",
     "plt.xlim(1620,1680)\n",
-    "plt.yticks([90,180,270])\n",
+    "# plt.yticks([90,180,270])\n",
     "im=ax.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar(im)\n",
-    "setlabel3(ax,'(f)')\n",
+    "cb=plt.colorbar(im,location='top',fraction=0.15,shrink=0.5,aspect=10,format=\"%3.2f\")\n",
+    "cb.locator = tick_locator\n",
+    "cb.update_ticks()\n",
+    "tick_locator=ticker.MaxNLocator(nbins=5)\n",
+    "# plt.colorbar(im)\n",
+    "setlabel2(ax,'(f)')\n",
     "plt.xlabel(\"Time (fs)\")\n",
-    "plt.ylabel(\"$\\\\theta$ (degrees)\")\n",
+    "plt.ylabel(\"$\\\\theta$ ($\\\\pi$)\")\n",
     "# for tick in ax.get_yticklabels():\n",
     "#     tick.set_rotation(55)\n",
     "ax= fig.add_subplot(gs[2,0])\n",
@@ -464,62 +486,6 @@
     "                    wspace=0.3, \n",
     "                    hspace=0.35)\n",
     "plt.savefig(dir+'picture\\\\f5Wave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\pop.dat')\n",
-    "# np.savetxt(dir+\"data\\\\f6.dat\",data,fmt=\"%.9f\")\n",
-    "# from scipy import interpolate\n",
-    "# x=data[:,0]\n",
-    "# y=data[:,1]\n",
-    "# x1=np.arange(10,151,1)\n",
-    "# print(len(x1))\n",
-    "# # fn=interpolate.interp1d(x,y,kind='nearest')\n",
-    "# # fz=interpolate.interp1d(x,y,kind='zero')\n",
-    "# # fs=interpolate.interp1d(x,y,kind='slinear')\n",
-    "# # fq=interpolate.interp1d(x,y,kind='quadratic')\n",
-    "# fc=interpolate.interp1d(x,y,kind='cubic')\n",
-    "# #method of kind: nearest, zero, slinear, quadratic,cubic\n",
-    "# y1=fc(x1)\n",
-    "# # y2=fz(x1)\n",
-    "# # y3=fs(x1)\n",
-    "# # y4=fq(x1)\n",
-    "# #y5=fc(x1)\n",
-    "# color='tab:red'\n",
-    "# plt.plot(x,y,color=color,marker=\"o\",markersize='5')\n",
-    "# plt.ylim(0,1)\n",
-    "# color = 'tab:blue'\n",
-    "# #plt.plot(x1,y1,'--',color=color,marker=\".\")#,x1,y2,x1,y3,x1,y4,x1,y5)\n",
-    "# #plt.legend([\"Origin\"])#,\"nearest\",\"zero\",\"slinear\",\"quadratic\",\"cubic\"])\n",
-    "# plt.xlabel(\"$t_{\\\\rm{pp}}$ (fs)\")\n",
-    "# plt.ylabel(\"Ionization probability\")\n",
-    "# plt.savefig(dir+\"picture\\\\f6pop.\"+figureType,bbox_inches=\"tight\",dpi=figureDPI)\n",
-    "t=[]\n",
-    "p=[]\n",
-    "tp=[[]for i in range(2)]\n",
-    "for i in range(10,180,5):\n",
-    "    data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\delay\\\\'+str(i)+'\\\\populationofstate.dat')\n",
-    "    x=data[:,0]\n",
-    "    y1=data[:,1]\n",
-    "    y2=data[:,2]\n",
-    "    y3=data[:,3]\n",
-    "    print(i)\n",
-    "    t.append(i)\n",
-    "    tp[0].append(i) \n",
-    "    tp[1].append(max(y3))\n",
-    "    p.append(max(y3))\n",
-    "plt.plot(tp[0],tp[1],'k-',marker='o',markerfacecolor='r',markersize='5')\n",
-    "plt.ylim(-0.17,1.05)\n",
-    "plt.xlabel(\"$t_{\\\\rm{pp}}$ (fs)\")\n",
-    "plt.ylabel(\"Ionization probability\")\n",
-    "plt.savefig('D:\\\\doc\\\\data\\\\ion\\\\picture\\\\f6pop.'+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
-    "np.savetxt('D:\\\\doc\\\\data\\\\ion\\\\data\\\\f6PopDelay.dat',tp)"
    ]
   },
   {
@@ -672,6 +638,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib.ticker\n",
+    "class OOMFormatter(matplotlib.ticker.ScalarFormatter):\n",
+    "    def __init__(self, order=0, fformat=\"%.3f\", offset=True, mathText=True):\n",
+    "        self.oom = order\n",
+    "        self.fformat = fformat\n",
+    "        matplotlib.ticker.ScalarFormatter.__init__(self,useOffset=offset,useMathText=mathText)\n",
+    "    def _set_order_of_magnitude(self):\n",
+    "        self.orderOfMagnitude = self.oom\n",
+    "    def _set_format(self, vmin=None, vmax=None):\n",
+    "        self.format = self.fformat\n",
+    "        if self._useMathText:\n",
+    "             self.format = r'$\\mathdefault{%s}$' % self.format\n",
+    "\n",
     "plt.figure(figsize=(16/2.54,24/2.54))\n",
     "titleLoc=\"left\"\n",
     "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\21\\\\\"\n",
@@ -687,7 +666,7 @@
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=\"%.3f\")\n",
     "# data=np.loadtxt(dir+\"data\\\\f1(2)PotentialEnergy.dat\")\n",
     "# x=data[:,0]\n",
     "# y=data[:,3]\n",
@@ -705,7 +684,7 @@
     "plt.ylim(1.75,10.0)\n",
     "setlabel3(ax,'(e)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=OOMFormatter(-3, mathText=False))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "\n",
@@ -722,7 +701,7 @@
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=\"%.3f\")\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "ax=plt.subplot(4,2,4)\n",
@@ -736,7 +715,7 @@
     "plt.ylim(1.75,10.0)\n",
     "setlabel3(ax,'(f)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=OOMFormatter(-3, mathText=False))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "\n",
@@ -753,7 +732,7 @@
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=\"%.3f\")\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "ax=plt.subplot(4,2,6)\n",
@@ -767,7 +746,7 @@
     "plt.ylim(1.75,10.0)\n",
     "setlabel3(ax,'(g)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=OOMFormatter(-3, mathText=False))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "\n",
@@ -785,7 +764,7 @@
     "#plt.xlim(TimeTurn,TimeEnd)\n",
     "plt.ylim(1.75,10.0)\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=\"%.3f\")\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "ax=plt.subplot(4,2,8)\n",
@@ -799,7 +778,7 @@
     "plt.ylim(1.75,10.0)\n",
     "setlabel3(ax,'(h)')\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
-    "plt.colorbar()\n",
+    "plt.colorbar(format=OOMFormatter(-3, mathText=False))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.subplots_adjust(left=0.1,\n",
